--- a/android_client/app/src/main/res/layout/surface_container.xml
+++ b/android_client/app/src/main/res/layout/surface_container.xml
@@ -8,4 +8,8 @@
         android:id="@+id/surface"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <FrameLayout
+        android:id="@+id/layer_operation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </FrameLayout>
