--- a/android_client/app/src/main/res/values/themes.xml
+++ b/android_client/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="Theme.Mirror" parent="android:Theme.Material.Light.NoActionBar" />
-    <style name="FullScreenTheme" parent="android:Theme.Material.Light.NoActionBar">
+    <style name="FullScreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
